--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,8 @@
         "psr-4": {
             "App\\": "src/"
         }
+    },
+    "require": {
+        "pierreminiggio/database-connection": "^1.1"
     }
 }
