Show Managed Profiles

--- a/.env.example.json
+++ b/.env.example.json
@@ -2,5 +2,7 @@
     "host": "",
     "database": "url-shortener",
     "username": "",
-    "password": ""
+    "password": "",
+    "managedLinksApiUri": "https://domain.com",
+    "managedLinksApiToken": "sometoken"
 }
